--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
 
 <p>hey, my name is Marc Angel. I don’t pretend to know things. I’d like to say that I’m a jack of all trades, considering I can’t stay still in one field of art. I’ve never stuck with one consistent thing in my life, and rely solely on my connections to nostalgia and how I draw on that feeling into my work. I’m a singer-songwriter, but I also take up photography. I shoot mainly at concerts. Music is considered the main root to my being. It’s who I am basically. Grew up with it and lived vicariously through it. Photography is  a way I can express myself without communicating through performing. There’s a way to combine these two, as there is with many other things in life. In my works, I capture the blending of neon lighting behind artists who are pouring their souls on stage and not apologizing for anything. The lights and motions of the artists blend together as a form of harmony. A soul tie of sorts. I indulge in all types of music, the same way as I indulge in many forms of photography. </p>
 
+  <ul>
+    <li><a href="readings.html">Readings</a></li>
+    <li><a href="homework2.html">Homework 2</a></li>
+  </ul>
+
 </body>
 
 </html>
