--- a/homework3.html
+++ b/homework3.html
@@ -18,10 +18,10 @@
 <img src="homework3/dof/Blur-original.jpg" width="50%">
 
 <h3>Shallow Depth of Field</h3>
-<img src="homework3/dof/shallow-dof-1.jpg" width="50%">
+<img src="homework3/dof/shallow-dof.jpg" width="50%">
 
 <h3>Photoshopped Field Blur</h3>
-<img src="homework3/dof/psBlur-1.jpg" width="50%">
+<img src="homework3/dof/psBlur.jpg" width="50%">
 
 <h2>Part 2: Camera Raw</h2>
 
