--- a/homework3.html
+++ b/homework3.html
@@ -37,7 +37,9 @@
 <h3>After</h3>
 <img src="homework3/raw/edited2.jpg" width="50%">
 
-<a href="index.html">Homepage</a>
+<a href="index.html"
+  
+  >Homepage</a>
 </body>
 
 </html>
