--- a/homework3.html
+++ b/homework3.html
@@ -23,6 +23,7 @@
 <h3>Photoshopped Field Blur</h3>
 <img src="homework3/dof/psBlur.jpg" width="50%">
 
+<p>For Part 1, I had to shoot outside of class… mainly because with the given time constraint and setting sun, I was not able to capture ANYTHING… Huge blunder and very unfortunate. Totally decided that the next few days following this class would be a great time to actually be more consistent with photography and carry my camera around everywhere I went. The image showing deep depth of field was taken in Dumbo, between two buildings capturing the Brooklyn bridge. The lighting was just right and the shot itself stuck out like a sore thumb. Easy shot. The next shot showing shallow depth of field was originally going to be my deep depth of field shot, but the little tiny plant was moving way too much due to wind picking up. Every shot ended up being very blurry. I really loved the red of this plant, and I loved how it stuck out against the background after the shot had processed. Very grateful the wind stood still for a single minute haha. </p>
 <h2>Part 2: Camera Raw</h2>
 
 <h3>Before</h3>
@@ -36,6 +37,8 @@
 
 <h3>After</h3>
 <img src="homework3/raw/edited2.jpg" width="50%">
+
+<p>For Part 2, these are shots that were taken on two separate walks that I typically go on. The first shot was of a train station, which looks like it really could not be saved. I loved how it turned out, even if it does look a bit sloppy. I’m a big fan of sloppy shots that have random blur, or random ghost motions being captured. I obviously had to boost the exposure WAY up and went from there to finish off what I wanted out of this image. The yellow washed-out look was a result of me boosting the exposure, which in turn boosted the yellow lighting from the stairway. I decided that I really liked this look, so I ran with that being my main feature of the photo. The second photo is pretty simple, and it captured the motion of a car driving by. I’ve always loved capturing cars and people in motion contrasting still backgrounds, so the car driving by at the right moment was a cherry on top for me. Boosted the exposure and zoomed it in slightly. Also raised the saturation and vibrance slightly to give it a vintage look.</p>
 
 <a href="index.html"
   
