--- a/homework8.html
+++ b/homework8.html
@@ -1,1 +1,19 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Homework 8</title>
+</head>
+<body>
+  <h1>Homework 8 - Animated GIFS</h1>
 
+  <h2>Blinking Eye</h2>
+  <img src="eye-blink.gif" alt="eye blink gif" width="500">
+
+
+  <h2>PXE Disc</h2>
+  <img src="pxe-gif.gif" alt="spinning PXE disc" width="500">
+ 
+
+  <p><a href="index.html">Go back to homepage</a></p>
+</body>
+</html>
