--- a/homework8.html
+++ b/homework8.html
@@ -12,6 +12,9 @@
 
   <h2>PXE Disc</h2>
   <img src="homework8/pxe-gif.gif" alt="spinning PXE disc" width="500">
+
+  <h2>Reflection</h2>
+ <p>Homework 8, we have the animated eye as well as the fun lil second part-er using puppet warp. The first part of the project was relatively simple, seeing as I just separated the eyelid from the entire eye itself (select tool > creating a new layer with the selected section) and just gradually dragging it downwards to close the eye. The second part of the project was the most fun. Originally I wanted to JUST make the disk spin, but I went a little overboard I think. I used the album released by Ecco2K, known as PXE. The entire design language surrounding the album has to be one of my favorites, so I tried my best to capture its likeness by using graphics that were associated with the music video, as well as the CD box art with the poster that it comes with. My favorite part had to be making the stars flash in and out randomly, as well as actually making the CD spin. That part was very relieving to figure out considering I was struggling trying to make points to keep the CD still in one spot to be able to rotate it. The words that phase in and out on the top of the screen are written on the box art itself, but I couldn’t find a good copy of it. I remade it using some text, a similar font, and the filter gallery to make it look like it had been written in on the project itself.</p>
  
 
   <p><a href="index.html">Go back to homepage</a></p>
