--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <li><a href="homework2.html">Homework 2</a></li>
     <li><a href="homework3.html">Homework 3</a></li>
     <li><a href="homework4.html">Homework 4</a></li>
+    <li><a href="homework5.html">Homework 5</a></li>
     <li><a href="homework6.html">Homework 6</a></li>
     <li><a href="homework8.html">Homework 8</a></li>
   </ul>
