--- a/homework5.html
+++ b/homework5.html
@@ -7,7 +7,7 @@
   <h1>Homework 5</h1>
 
   <h2>Teach Your Children Well - Illustrator Addition</h2>
-  <img src="campaign 2" alt="campaign 2 illustration" width="500">
+  <img src="campaign 2.png" alt="campaign 2 illustration" width="500">
 
 
   <h2>Reflection</h2>
