--- a/homework5.html
+++ b/homework5.html
@@ -11,7 +11,7 @@
 
 
   <h2>Reflection</h2>
- <p>Reflection goes here</p>
+ <p>For Homework #5, I went with my horizontal piece “Teach Your Children Well”. I was trying to keep with a distressed but minimal look for the additional part, so I cut up a hand in the shape of a firearm, and created the explosion combining 3 star shapes on Illustrator. I blended the stars together by cutting out all of the middle portions, and thickened the outline on the singular star afterwards. I wanted to go for a cartoonish “BANG” kind of explosion graphic, but wanted to keep the color scheme the same as the poster itself which is just black and an ivory white. The poster itself is an anti-war poster, so I wanted the graphic I created in illustrator to be representative of that. It’s representative of the people in power who lead and start these wars, conveying that the deadliest weapon is the one of the people who command and give orders.</p>
 
   <p><a href="index.html">Go back to homepage</a></p>
 </body>
