--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <li><a href="homework5.html">Homework 5</a></li>
     <li><a href="homework6.html">Homework 6</a></li>
     <li><a href="homework8.html">Homework 8</a></li>
+    <li><a href="homework9.html">Homework 9</a></li>
   </ul>
 
 </body>
