--- a/homework9.html
+++ b/homework9.html
@@ -11,7 +11,7 @@
 
 
   <h2>Reflection</h2>
- <p>Reflection goes here</p>
+ <p>For my data visualization assignment, I went with music as my main topic. There wasn’t a whole lot that I thought of, and I wasn’t able to receive many responses from my Instagram story polls. I went with 2 questions, “What is your preferred streaming service?” and “What’s your go-to genre you listen to on a daily basis” with the answers varying across the board. I went with circle graphs since those were the strongest choice for my type of poll. The background is actually a shot I took from a concert. Pretty neat!</p>
 
   <p><a href="index.html">Go back to homepage</a></p>
 </body>
